# chess_project

./: .gitignore  chess_project.drawio  docker-compose.yml  readme.md
chess_backend/: .envrc  Dockerfile  docker-compose.yml  pyproject.toml
chess_backend/libs/: __init__.py  database.py
chess_backend/libs/models/: __init__.py  models.py
chess_backend/libs/services/: face_detection.py  face_detection_helpers.py  main.py
chess_backend/libs/settings/: __init__.py
chess_backend/tests/: conftest.py
chess_backend/tests/unit_tests/: test_main.py
chess_backend/tests/unit_tests/services/: test_face_detection.py  test_face_detection_helpers.py
chess_frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
chess_frontend/public/: index.html
chess_frontend/src/: App.js  VideoRecorder.js  WebcamStream.js  api.js
